Bootstrap and styling

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.2.0",
     "core-js": "^3.8.3",
     "file-saver": "^2.0.5",
     "vue": "^3.2.13"
