--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootstrap": "^5.2.0",
     "core-js": "^3.8.3",
     "file-saver": "^2.0.5",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
