--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@popperjs/core": "^2.11.5",
+    "@vuelidate/core": "^2.0.0-alpha.44",
+    "@vuelidate/validators": "^2.0.0-alpha.31",
     "bootstrap": "^5.2.0",
     "core-js": "^3.8.3",
     "file-saver": "^2.0.5",
