--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vuelidate/validators": "^2.0.0-alpha.31",
     "bootstrap": "^5.2.0",
     "core-js": "^3.8.3",
+    "detect-file-encoding-and-language": "^2.2.2",
     "file-saver": "^2.0.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
